<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="7"
        android:orientation="horizontal"
        android:weightSum="4">

        <ImageView
            android:id="@+id/movieImage"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:padding="8dp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="3"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/movieTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ellipsize="marquee"
                android:text="@string/title"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/movieStudio"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/studio"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/movieCRating"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/criticsrating"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btnMEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="4dp"
            android:layout_margin="4dp"
            android:textSize="16sp"
            android:backgroundTint="@color/black"
            android:text="@string/medit"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/btnMDelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="4dp"
            android:layout_margin="4dp"
            android:textSize="16sp"
            android:backgroundTint="@color/black"
            android:text="@string/mdelete"
            tools:ignore="NestedWeights" />

    </LinearLayout>
</LinearLayout>
