<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    android:gravity="center">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editMovieTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:padding="8dp"
        android:hint="@string/enter_movie_title"
        tools:ignore="VisualLintTextFieldSize" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editMovieStudio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:padding="8dp"
        android:hint="@string/enter_movie_studio"
        tools:ignore="VisualLintTextFieldSize" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editMovieCRating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:padding="8dp"
        android:hint="@string/enter_critics_rating"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/btnadd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:backgroundTint="@color/black"
        android:padding="8dp"
        android:text="Add"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>